--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.18",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "socket.io": "^4.7.2"
+    "mongoose": "^7.5.3",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "@types/uuid": "^9.0.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
